--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
+    "@react-spring/parallax": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "gsap": "^3.12.5",
     "lucide-react": "^0.408.0",
     "react": "^18.3.1",
